# tugraph-db-management

./: .gitignore  README.md  README_CN.md  control.sh  local_build.sh  pom.xml  temp.txt  tugraph_management.db  ut_start.sh  ut_stop.sh
.github/workflows/: ci.yml
checkstyle/: suppressions.xml
misc/tugraph_audit/: CMakeLists.txt  logger.h  test.cpp
misc/tugraph_management_c++/: CMakeLists.txt  client.cpp  tugraph_management.pb.cc  tugraph_management.pb.h  tugraph_management.proto
src/main/java/com/antgroup/tugraph/: TuGraphDBManagementApplication.java  TuGraphDBManagementApplicationRunner.java  TugraphManagementApplication.java  TugraphManagementApplicationRunner.java
src/main/java/com/antgroup/tugraph/jdbc/: Job.java  JobDao.java  JobDaoImpl.java  JobResult.java  JobService.java  JobServiceImpl.java  JobStatus.java
src/main/java/com/antgroup/tugraph/job/: AlgoResult.java  Job.java  JobDao.java  JobDaoImpl.java  JobService.java  JobServiceImpl.java
src/main/java/com/antgroup/tugraph/model/: AlgoResult.java  Job.java
src/main/java/com/antgroup/tugraph/service/: HeartbeatService.java  HeartbeatServiceImpl.java  JobDao.java  JobManagementService.java  JobManagementServiceImpl.java  JobService.java
src/main/java/com/antgroup/tugraph/serviceImpl/: JobDaoImpl.java  (+2 more)
src/main/proto/: echo.proto  tugraph_db_management.proto  tugraph_management.proto
src/main/resources/: application-ut.properties  application.properties  logback.xml
src/test/java/com/antgroup/tugraph/: TuGraphDBManagementApplicationTests.java  TugraphManagementApplicationTests.java
(+3 files in other folders)
